--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,10 @@
     "jquery": "2.1.0",
     "jQuery-Storage-API": "~1.7.2",
     "jsSHA": "~1.5.0",
-    "tipsy-jmalonzo": "~1.0.1"
+    "tipsy-jmalonzo": "~1.0.1",
+    "jquery-ui": "~1.11.3",
+    "jquery-flot": "0.8.3",
+    "simple-statistics": "0.7.0"
   },
   "resolutions": {
     "jquery": "2.1.0"
