work on profile editor and reports

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "tipsy-jmalonzo": "~1.0.1",
     "jquery-ui": "~1.11.3",
     "jquery-flot": "0.8.3",
-    "simple-statistics": "0.7.0"
+    "simple-statistics": "0.7.0",
+    "jquery-ui-timepicker-addon": "2.4.5"
   },
   "resolutions": {
     "jquery": "2.1.0"
